Fix valign

--- a/src/components/icon/css/shadow/content/icon.css
+++ b/src/components/icon/css/shadow/content/icon.css
@@ -9,6 +9,7 @@
 }
 .icon {
   display: inline-block;
+  vertical-align: top;
   opacity: var(--icon-opacity);
   width: var(--icon-width);
   height: var(--icon-height);
